[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/settings.tscn" type="PackedScene" id=1]
[ext_resource path="res://script_scenes/menu_in_game.gd" type="Script" id=2]
[ext_resource path="res://assets/block/strong_wall.png" type="Texture" id=3]
[ext_resource path="res://assets/block/white.png" type="Texture" id=4]

[sub_resource type="Theme" id=2]

[node name="menu" type="Control"]
script = ExtResource( 2 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( -1.43051e-05, -32 )
scale = Vector2( 32, 22 )
texture = ExtResource( 3 )

[node name="settings" parent="." instance=ExtResource( 1 )]
margin_left = -520.0
margin_top = -288.0
margin_right = -520.0
margin_bottom = -288.0

[node name="White" type="Sprite" parent="."]
modulate = Color( 0.235294, 0.235294, 0.235294, 0.968627 )
self_modulate = Color( 0.976471, 0.976471, 0.976471, 1 )
position = Vector2( 3.05176e-05, -32 )
scale = Vector2( 32, 22 )
texture = ExtResource( 4 )

[node name="conntinue" type="Button" parent="."]
margin_left = -112.0
margin_top = -128.0
margin_right = 3.0
margin_bottom = -108.0
rect_scale = Vector2( 2, 2 )
theme = SubResource( 2 )
text = "CONTINUE PLAY"

[node name="exit" type="Button" parent="."]
margin_left = -32.0
margin_top = 32.0
margin_right = 7.0
margin_bottom = 52.0
rect_scale = Vector2( 2, 2 )
text = "EXIT"

[node name="options" type="Button" parent="."]
margin_left = -64.0
margin_top = -64.0
margin_right = 7.0
margin_bottom = -44.0
rect_scale = Vector2( 2, 2 )
text = "OPTIONS"

[connection signal="pressed" from="conntinue" to="." method="_on_conntinue_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
